// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton renders correct element 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-weight: 700;
  margin: 0;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  border: 0;
  border-radius: 4px;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  background-color: var(--theme-ui-colors-primary,#0467a6);
  color: white;
  fill: white;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #03588d;
}

.emotion-0:active {
  background-color: #034874;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-disabled,#B3B9BE);
  cursor: default;
}

<a
  class="emotion-0"
  href="http://some.com/external"
>
  child
</a>
`;

exports[`NavButton renders correct element 1`] = `
.emotion-0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-weight: 700;
  margin: 0;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  border: 0;
  border-radius: 4px;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  background-color: var(--theme-ui-colors-primary,#0467a6);
  color: white;
  fill: white;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #03588d;
}

.emotion-0:active {
  background-color: #034874;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-disabled,#B3B9BE);
  cursor: default;
}

<a
  class="emotion-0"
  href="/somewhere"
>
  child
</a>
`;

exports[`disabled style 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-weight: 700;
  margin: 0;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  border: 0;
  border-radius: 4px;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  background-color: var(--theme-ui-colors-primary,#0467a6);
  color: white;
  fill: white;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #03588d;
}

.emotion-0:active {
  background-color: #034874;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-disabled,#B3B9BE);
  cursor: default;
}

<button
  aria-disabled="true"
  class="emotion-0"
  disabled=""
  style="pointer-events: none;"
  type="button"
>
  child
</button>
`;

exports[`variants accent 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-weight: 700;
  margin: 0;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  border: 0;
  border-radius: 4px;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  background-color: var(--theme-ui-colors-accent,#D00854);
  color: white;
  fill: white;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #b7074a;
}

.emotion-0:active {
  background-color: #9f0640;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-disabled,#B3B9BE);
  cursor: default;
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;

exports[`variants flat 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-weight: 700;
  margin: 0;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  border: 0;
  border-radius: 4px;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  background-color: white;
  color: blues.dark;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: rgba(4,103,166,0.2);
}

.emotion-0:active {
  background-color: rgba(4,103,166,0.4);
}

.emotion-0:disabled {
  color: var(--theme-ui-colors-grey,#B3B9BE);
  cursor: default;
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;

exports[`variants primary (default) 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  font-weight: 700;
  margin: 0;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  border: 0;
  border-radius: 4px;
  cursor: pointer;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  background-color: var(--theme-ui-colors-primary,#0467a6);
  color: white;
  fill: white;
}

.emotion-0:focus,
.emotion-0:hover {
  background-color: #03588d;
}

.emotion-0:active {
  background-color: #034874;
}

.emotion-0:disabled {
  background-color: var(--theme-ui-colors-disabled,#B3B9BE);
  cursor: default;
}

<button
  class="emotion-0"
  type="button"
>
  child
</button>
`;
